--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "vite",
     "build": "vite build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
