--- a/package.json
+++ b/package.json
@@ -3,22 +3,24 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "22"
+  },
   "scripts": {
-    "start": "vite",
     "build": "vite build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "serve -s dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lit": "^3.2.1"
+    "lit": "^3.2.1",
+    "serve": "^14.2.4"
   },
   "devDependencies": {
     "sass": "^1.83.1",
     "sass-embedded": "^1.83.1",
     "vite": "^6.0.7",
     "vite-plugin-string": "^1.2.3"
-  },
-  "packageManager": "pnpm@9.15.3+sha512.1f79bc245a66eb0b07c5d4d83131240774642caaa86ef7d0434ab47c0d16f66b04e21e0c086eb61e62c77efc4d7f7ec071afad3796af64892fae66509173893a"
+  }
 }
