#LIT3-LESS | MULTI UPDATE FOR PRODUCTION #3.1 ======================================================  - UPDATE NODE START COMMAND W/ 'VITE PREVIEW'

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "vite build",
-    "start": "serve -s dist"
+    "start": "vite preview"
   },
   "keywords": [],
   "author": "",
